--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;600;700;800;900&display=swap');
+/* font-family: 'Kanit', sans-serif;  */
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
+/* font-family: 'Nunito', sans-serif;  */
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  /* position: absolute; */
+  /* min-height: 100%; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.fnt-kanit{
+  font-family: 'Kanit', sans-serif; 
+}
+
+.custom-header{
+  position: sticky;
+  width: 100%;
+}
+
+.custom-height-footer {
+  position: fixed;
+  width: 100%;
+  top: calc(100vh - 40px);
 }
